objects/Account.object
<CustomObject>
    <fields>
        <fullName>AMPAge__c</fullName>
        <formula>Today() - AccountMasterProfileLastUpdated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between today and account master profile last updated date.</inlineHelpText>
        <label>Days Since Last Master Profile Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccLifecycle__c</fullName>
        <description>SR0 - Some accounts may be part of a strategy that imply to manage a lifecycle</description>
        <inlineHelpText>The degree of maturity in regard to business relationship between an account and SE. Serves as an indicator of status of where an account exists at any time withing its business relationship with SE</inlineHelpText>
        <label>Account Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Company Closed</fullName>
                </value>
                <value>
                    <fullName>Operations Suspended</fullName>
                </value>
                <value>
                    <fullName>Relationship Terminated</fullName>
                </value>
                <value>
                    <fullName>Created in Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate (to be merged)</fullName>
                </value>
                <value>
                    <fullName>Dormant - No Recent Schneider Activity</fullName>
                </value>
                <value>
                    <fullName>Compagny Closed</fullName>
                    <isActive>false</isActive>
                    <label>Compagny Closed</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>S0</fullName>
                    <isActive>false</isActive>
                    <label>S0</label>
                </value>
                <value>
                    <fullName>S1</fullName>
                    <isActive>false</isActive>
                    <label>S1</label>
                </value>
                <value>
                    <fullName>S2</fullName>
                    <isActive>false</isActive>
                    <label>S2</label>
                </value>
                <value>
                    <fullName>S3</fullName>
                    <isActive>false</isActive>
                    <label>S3</label>
                </value>
                <value>
                    <fullName>S4</fullName>
                    <isActive>false</isActive>
                    <label>S4</label>
                </value>
                <value>
                    <fullName>abcd</fullName>
                    <isActive>false</isActive>
                    <label>abcd</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccNuclear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nuclear Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccShortName__c</fullName>
        <description>SR0 - Should be used to indicate Name of the company ie IBM</description>
        <inlineHelpText>An abridged, shortened, or abbreviated designation for an account.</inlineHelpText>
        <label>Account Short Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccType__c</fullName>
        <description>SR0 - Define the Type of an account (prospect, direct customer, indirect customer)</description>
        <inlineHelpText>Denotes the current buying relationship with SE. Prospect no established buying relationship with SE. Indirect purchases products or services through a distributor or other channel partner. Direct has a buying relationship, or is in the process of buying</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PR</fullName>
                    <default>true</default>
                    <label>PR</label>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountExternalDashboardView__c</fullName>
        <description>Field to view External Dashboard</description>
        <formula>IF(PRMAccount__c = TRUE, IF(TEXT(PRMBusinessType__c) &lt;&gt; &quot;EU&quot;, (HYPERLINK(&quot;/apex/VFP_HandleRedirect?isdtp=nv&amp;field=PRMAccount360&amp;id=&quot; &amp; Id, IMAGE(&quot;/resource/1460985773000/PRMActionIcons/HP_360_icon.png&quot;, &quot;Partner 360 View&quot; ), &quot;_self&quot;)), (HYPERLINK(&quot;/apex/VFP_HandleRedirect?isdtp=nv&amp;field=PRMAccount360&amp;id=&quot; &amp; Id, IMAGE(&quot;/resource/1460985773000/PRMActionIcons/CU_360_icon.png&quot;, &quot;Customer 360 View&quot;), &quot;_self&quot;))), (HYPERLINK(&quot;/apex/VFP_HandleRedirect?isdtp=nv&amp;field=PRMAccount360&amp;id=&quot; &amp; Id, IMAGE(&quot;/resource/1460985773000/PRMActionIcons/HP_360_Grey_icon.png&quot;, &quot;Partner 360 View&quot;, 45, 38), &quot;_self&quot;)))</formula>
        <label>&lt;Partner 360 View&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountLocalName__c</fullName>
        <description>SR0 - Used to store the account in local language</description>
        <inlineHelpText>Limited to non-Latin character languages only.</inlineHelpText>
        <label>Local Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountMasterProfileLastUpdated__c</fullName>
        <label>Account Master Profile Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountMasterProfile__c</fullName>
        <description>Holds Account Master Profile information</description>
        <label>Account Master Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MS1</fullName>
                </value>
                <value>
                    <fullName>MS2</fullName>
                </value>
                <value>
                    <fullName>MS3</fullName>
                </value>
                <value>
                    <fullName>MG1</fullName>
                </value>
                <value>
                    <fullName>MG2</fullName>
                </value>
                <value>
                    <fullName>MG3</fullName>
                </value>
                <value>
                    <fullName>MQ1</fullName>
                </value>
                <value>
                    <fullName>MQ2</fullName>
                </value>
                <value>
                    <fullName>MQ3</fullName>
                </value>
                <value>
                    <fullName>Not Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountQualifiedForPlatformingCAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>April 2014 Release - The purpose of this field is purely for Reporting.</description>
        <inlineHelpText>To be used for easily identifying the Accounts sales users will include yearly for Platforming/ CAP</inlineHelpText>
        <label>Account qualified for Platforming/ CAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <description>SR0 - Incidate if an account is certified or not (MDM certification)</description>
        <label>Account Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CR</fullName>
                    <default>true</default>
                    <label>CR</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountSupportLevel__c</fullName>
        <label>Account Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
                <value>
                    <fullName>L3</fullName>
                </value>
                <value>
                    <fullName>L4</fullName>
                </value>
                <value>
                    <fullName>L5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Email_Domain_Info__c</fullName>
        <label>Account Email Domain Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email_Domain__c</fullName>
        <description>store the most frequent CED from all the contacts that are linked to the Account.</description>
        <label>Account Email Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_VIPFlag__c</fullName>
        <inlineHelpText>Designates an account as part of Schneider&apos;s VIP Customer Experience Program and the level at which the account has attained. VIP Status levels assign special considerations and benefits to high-value customers.</inlineHelpText>
        <label>VIP Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP1</fullName>
                </value>
                <value>
                    <fullName>VIP2</fullName>
                </value>
                <value>
                    <fullName>VIP3</fullName>
                </value>
                <value>
                    <fullName>VIP4</fullName>
                </value>
                <value>
                    <fullName>VIP5</fullName>
                </value>
                <value>
                    <fullName>VIP6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_VIPIcon__c</fullName>
        <formula>IF( 
    ISPICKVAL(Account_VIPFlag__c,&quot;VIP1&quot;),
    IMAGE(&quot;/resource/STR_ACC_VIPGold&quot;,&quot;VIP Gold&quot;,20,31), 
    IF( 
        OR(
            ISPICKVAL(Account_VIPFlag__c,&quot;&quot;),
            ISPICKVAL(Account_VIPFlag__c,&quot;VIP2&quot;),
            ISPICKVAL(Account_VIPFlag__c,&quot;VIP3&quot;)
        ),
        IMAGE(&quot;/resource/STR_ACC_VIPBlankSpace&quot;,&quot;VIP BlankSpace&quot;,20,31), 
        IF( 
            ISPICKVAL(Account_VIPFlag__c,&quot;VIP4&quot;),
            IMAGE(&quot;/resource/VIPOEM&quot;,&quot;&quot;,20,31),
            IF(
                ISPICKVAL(Account_VIPFlag__c,&quot;VIP5&quot;),
                IMAGE(&quot;/resource/VIPCTA&quot;,&quot;&quot;,20,31),IF(
                ISPICKVAL(Account_VIPFlag__c,&quot;VIP6&quot;),
                IMAGE(&quot;/resource/VIPMCTA&quot;,&quot;&quot;,30,45),&quot;&quot;
            ) 
            )   
        ) 
    )
)
&amp; &quot;&quot; &amp; 
IF(
AND(
PRMAccount__c = true
),
IMAGE(&quot;/resource/PRM_Membership_Green_Icon&quot;,&quot;&quot;,18,31),
&quot;&quot;
)
&amp; &quot;&quot; &amp; 
IF(
NOT(ISBLANK(PRMCTCasesCutoffDate__c)) ,
IMAGE(&quot;/resource/ACC_CT&quot;,&quot;&quot;,19,31), &quot;&quot;
)
&amp; &quot;&quot; &amp; 
IF(
AccNuclear__c = true,
IMAGE(&quot;/resource/ACC_Nuclear_Icon&quot;,&quot;&quot;,20,20),&quot;&quot;)
&amp; &quot;&quot; &amp; 
IF(TECH_MySECompany__c = true , IMAGE(&quot;/resource/MySE&quot;,&quot;&quot;,20,31), &quot;&quot;)

&amp; IF(Tech_Potential_MySECompany__c = true , IMAGE(&quot;/resource/PotentialMySe&quot;,&quot;&quot;,20,31), &quot;&quot;)

&amp; &quot;&quot; &amp;
IF(
ISPICKVAL(TailoredCare__c,&quot;TC2&quot;) ,
IMAGE(&quot;/resource/TC2&quot;,&quot;&quot;,20,31), &quot;&quot;
)
&amp; &quot;&quot; &amp;
IF(
ISPICKVAL(TailoredCare__c,&quot;TC1&quot;) ,
IMAGE(&quot;/resource/TC1&quot;,&quot;&quot;,20,31), &quot;&quot;
)
&amp; &quot;&quot; &amp;
IF(
ISPICKVAL(TailoredCare__c,&quot;TC3&quot;) ,
IMAGE(&quot;/resource/TC3&quot;,&quot;&quot;,20,31), &quot;&quot;
)
&amp; &quot;&quot; &amp;
IF(
NOT(ISBLANK(SpecialConditions__c)) ,
IMAGE(&quot;/resource/Special&quot;,&quot;&quot;,20,25), &quot;&quot;
)
&amp; &quot;&quot; &amp;
IF(
(ISPICKVAL(AccLifecycle__c, &quot;Dormant, No Activity&quot;) || ISPICKVAL(AccLifecycle__c, &quot;Company Closed&quot;)|| ISPICKVAL(AccLifecycle__c, &quot;Operations Suspended&quot;)|| ISPICKVAL(AccLifecycle__c, &quot;Relationship Terminated&quot; ) || ISPICKVAL(AccLifecycle__c, &quot;InActive&quot;))  ,
IMAGE(&quot;/resource/AC_Inactive&quot;,&quot;&quot;,20,25), &quot;&quot;
)
&amp; &quot;&quot; &amp;
IF(
(ISPICKVAL(AccLifecycle__c, &quot;Created in Error&quot;)||ISPICKVAL(AccLifecycle__c, &quot;Duplicate (to be merged)&quot;)) ,
IMAGE(&quot;/resource/AC_Warning&quot;,&quot;&quot;,20,25), &quot;&quot;
)
&amp; &quot;&quot; &amp; 
IF(CorporateHeadquarters__c, IMAGE(&quot;/resource/ACC_HQIcon&quot;,&quot;&quot;,20,31), &quot;&quot;)</formula>
        <label>&lt;AccountIcons&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddChangeTerritory__c</fullName>
        <description>Captures the specific territory</description>
        <formula>IF(
(NOT(ISBLANK(SE_Territory__c))) &amp;&amp;(SE_Territory__r.Country__r.Id &lt;&gt; Country__r.Id),

IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;) 
&amp;&quot; &quot;&amp;IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;) 
&amp;&quot; &quot;&amp;IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;&quot;)
&amp;&quot; &quot;&amp;BR()
&amp;&quot; This Sales Territory is no longer consistant with the Country of the Account. Please change the Sales Territory accordingly. &quot;
&amp;HYPERLINK(&apos;/apex/VFP77_TerritorySearch?ID=&apos; + Id, $Label.CL00746 ,&apos;_top&apos;),

IF(
ISBLANK(SE_Territory__c), 
HYPERLINK(&apos;/apex/VFP77_TerritorySearch?ID=&apos; + Id, $Label.CL00747 ,&apos;_top&apos;),
HYPERLINK(&apos;/apex/VFP77_TerritorySearch?ID=&apos; + Id, $Label.CL00746 ,&apos;_top&apos;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TechAddChangeTerritory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalAddress__c</fullName>
        <description>October Release 2011</description>
        <inlineHelpText>Further precision for the address like Building, Floor etc.</inlineHelpText>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualSales__c</fullName>
        <description>SR0 - Read-only field supplying by MDM</description>
        <label>Annual Sales</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationOfSETechnology__c</fullName>
        <inlineHelpText>Describes how SE products are being applied or may be applied at an end-user&apos;s site</inlineHelpText>
        <label>Application of SE Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Annealing</fullName>
                </value>
                <value>
                    <fullName>Batch House Control</fullName>
                </value>
                <value>
                    <fullName>Blow Moulding</fullName>
                </value>
                <value>
                    <fullName>Boiler Control</fullName>
                </value>
                <value>
                    <fullName>Brewing</fullName>
                </value>
                <value>
                    <fullName>Bushing Control</fullName>
                </value>
                <value>
                    <fullName>Carbon Heating</fullName>
                </value>
                <value>
                    <fullName>Casting</fullName>
                </value>
                <value>
                    <fullName>Ceramic Processing</fullName>
                </value>
                <value>
                    <fullName>Combustion Control</fullName>
                </value>
                <value>
                    <fullName>Composites</fullName>
                </value>
                <value>
                    <fullName>Electrical Boosting</fullName>
                </value>
                <value>
                    <fullName>Environmental Chambers</fullName>
                </value>
                <value>
                    <fullName>Environmental Control</fullName>
                </value>
                <value>
                    <fullName>Extruding</fullName>
                </value>
                <value>
                    <fullName>Fermentation</fullName>
                </value>
                <value>
                    <fullName>Flat Glass Online and Offline Heating</fullName>
                </value>
                <value>
                    <fullName>Furnace Atmosphere Control</fullName>
                </value>
                <value>
                    <fullName>Furnaces/kilns/dryers/forehearths</fullName>
                </value>
                <value>
                    <fullName>Glass Boosting</fullName>
                </value>
                <value>
                    <fullName>Heating â€“ IR</fullName>
                </value>
                <value>
                    <fullName>Heating - High Temperature</fullName>
                </value>
                <value>
                    <fullName>Heating - Vacuum</fullName>
                </value>
                <value>
                    <fullName>Heat Treatment</fullName>
                </value>
                <value>
                    <fullName>Heat Treatment Plating</fullName>
                </value>
                <value>
                    <fullName>Injection Moulding</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Pasteurising</fullName>
                </value>
                <value>
                    <fullName>Plastics Extrusion</fullName>
                </value>
                <value>
                    <fullName>Power Control</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssociatedRelationshipSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associated Relationship Suite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutomaticGeoLocation__c</fullName>
        <description>This field displays Geolocation informations from SDH. The master for the Geolocation infos will be SDH.</description>
        <inlineHelpText>Identifies the geographical location of an account site including its longitudinal and latitudinal coordinates.</inlineHelpText>
        <label>Geo Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>B2B_Distribution_Domains__c</fullName>
        <label>B2B Distribution Domain(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IAS</fullName>
                </value>
                <value>
                    <fullName>EDI</fullName>
                </value>
                <value>
                    <fullName>EDM</fullName>
                </value>
                <value>
                    <fullName>NCS</fullName>
                </value>
                <value>
                    <fullName>EES</fullName>
                </value>
                <value>
                    <fullName>BMD</fullName>
                </value>
                <value>
                    <fullName>PHH</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>EGD</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>WDS</fullName>
                </value>
                <value>
                    <fullName>ESE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BigMachines__Partner_Organization__c</fullName>
        <label>Oracle CPQ Cloud Partner Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandAssociated__c</fullName>
        <description>Used to indicate Engine Generator Dealer brands</description>
        <label>Brands Associated</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>BRS</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>CAT</fullName>
                </value>
                <value>
                    <fullName>CM</fullName>
                </value>
                <value>
                    <fullName>FGW</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>GT</fullName>
                </value>
                <value>
                    <fullName>HM</fullName>
                </value>
                <value>
                    <fullName>IO</fullName>
                </value>
                <value>
                    <fullName>JCB</fullName>
                </value>
                <value>
                    <fullName>KH</fullName>
                </value>
                <value>
                    <fullName>MOE</fullName>
                </value>
                <value>
                    <fullName>TPS</fullName>
                </value>
                <value>
                    <fullName>WJ</fullName>
                </value>
                <value>
                    <fullName>WN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BuildingsManagementDomain__c</fullName>
        <label>Buildings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BD007</fullName>
                </value>
                <value>
                    <fullName>BD008</fullName>
                </value>
                <value>
                    <fullName>BD006</fullName>
                </value>
                <value>
                    <fullName>BD004</fullName>
                </value>
                <value>
                    <fullName>BD009</fullName>
                </value>
                <value>
                    <fullName>BD002</fullName>
                </value>
                <value>
                    <fullName>BD010</fullName>
                </value>
                <value>
                    <fullName>BD011</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessName__c</fullName>
        <label>Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallFlowOption__c</fullName>
        <description>Call Flow options are dependent on Routing Type</description>
        <inlineHelpText>Available options are depending on the Routing Type</inlineHelpText>
        <label>Call Flow Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ServiceContractType__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Custom Profile</fullName>
                </value>
                <value>
                    <fullName>Fast Track</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>SR0 - Custom field to store City</description>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassLevel1__c</fullName>
        <description>SR0 - This field enables to classify an account.</description>
        <inlineHelpText>Customer Classification is a global referential denoting the primary role an account plays in  the value chain from SE through and including the End Customer.</inlineHelpText>
        <label>Classification Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
                <value>
                    <fullName>B2B Distribution</fullName>
                    <isActive>false</isActive>
                    <label>B2B Distribution</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <isActive>false</isActive>
                    <label>BL</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>Business Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Business Reseller</label>
                </value>
                <value>
                    <fullName>Business Resseller</fullName>
                    <isActive>false</isActive>
                    <label>Business Resseller</label>
                </value>
                <value>
                    <fullName>Consulting Engineers</fullName>
                    <isActive>false</isActive>
                    <label>Consulting Engineers</label>
                </value>
                <value>
                    <fullName>CONSUMER RETAILER B2C</fullName>
                    <isActive>false</isActive>
                    <label>CONSUMER RETAILER B2C</label>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                    <isActive>false</isActive>
                    <label>Contractor</label>
                </value>
                <value>
                    <fullName>Contractors</fullName>
                    <isActive>false</isActive>
                    <label>Contractors</label>
                </value>
                <value>
                    <fullName>CT</fullName>
                    <isActive>false</isActive>
                    <label>CT</label>
                </value>
                <value>
                    <fullName>Distributor Wholesales B2B</fullName>
                    <isActive>false</isActive>
                    <label>Distributor Wholesales B2B</label>
                </value>
                <value>
                    <fullName>Electrician</fullName>
                    <isActive>false</isActive>
                    <label>Electrician</label>
                </value>
                <value>
                    <fullName>Electricians</fullName>
                    <isActive>false</isActive>
                    <label>Electricians</label>
                </value>
                <value>
                    <fullName>Electricians and Tradepersons</fullName>
                    <isActive>false</isActive>
                    <label>Electricians and Tradepersons</label>
                </value>
                <value>
                    <fullName>EN1</fullName>
                    <isActive>false</isActive>
                    <label>EN1</label>
                </value>
                <value>
                    <fullName>End Customer - Operator - End User</fullName>
                    <isActive>false</isActive>
                    <label>End Customer - Operator - End User</label>
                </value>
                <value>
                    <fullName>End User</fullName>
                    <isActive>false</isActive>
                    <label>End User</label>
                </value>
                <value>
                    <fullName>End User/Customer</fullName>
                    <isActive>false</isActive>
                    <label>End User/Customer</label>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>EU1</fullName>
                    <isActive>false</isActive>
                    <label>EU1</label>
                </value>
                <value>
                    <fullName>EU2</fullName>
                    <isActive>false</isActive>
                    <label>EU2</label>
                </value>
                <value>
                    <fullName>EU3</fullName>
                    <isActive>false</isActive>
                    <label>EU3</label>
                </value>
                <value>
                    <fullName>EU5</fullName>
                    <isActive>false</isActive>
                    <label>EU5</label>
                </value>
                <value>
                    <fullName>EU7</fullName>
                    <isActive>false</isActive>
                    <label>EU7</label>
                </value>
                <value>
                    <fullName>EU9</fullName>
                    <isActive>false</isActive>
                    <label>EU9</label>
                </value>
                <value>
                    <fullName>FI</fullName>
                    <isActive>false</isActive>
                    <label>FI</label>
                </value>
                <value>
                    <fullName>FI3</fullName>
                    <isActive>false</isActive>
                    <label>FI3</label>
                </value>
                <value>
                    <fullName>Hors Industry</fullName>
                    <isActive>false</isActive>
                    <label>Hors Industry</label>
                </value>
                <value>
                    <fullName>I9Z</fullName>
                    <isActive>false</isActive>
                    <label>I9Z</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>